<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.vasomedical.spinetracer.util.widget.textView.NJTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:text="@string/please_select_detect_options"
            android:textSize="@dimen/text_h_2"
            android:textColor="@color/text_gray_dark"
            android:textStyle="bold"
            />


        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/option_button_1"
            android:layout_width="@dimen/button_w_0"
            android:layout_height="@dimen/button_h_6"
            android:layout_marginTop="@dimen/margin_0"
            android:text="@string/detect_option_1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />

        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/option_button_2"
            android:layout_width="@dimen/button_w_0"
            android:layout_height="@dimen/button_h_6"
            android:layout_marginTop="@dimen/margin_0"
            android:text="@string/detect_option_2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />

        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/option_button_3"
            android:layout_width="@dimen/button_w_0"
            android:layout_height="@dimen/button_h_6"
            android:layout_marginTop="@dimen/margin_0"
            android:text="@string/detect_option_3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />

        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/option_button_4"
            android:layout_width="@dimen/button_w_0"
            android:layout_height="@dimen/button_h_6"
            android:layout_marginTop="@dimen/margin_0"
            android:text="@string/detect_option_4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />

        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/option_button_5"
            android:layout_width="@dimen/button_w_0"
            android:layout_height="@dimen/button_h_6"
            android:layout_marginTop="@dimen/margin_0"
            android:text="@string/detect_option_5"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/next_button"
            android:layout_width="@dimen/button_h_5"
            android:layout_height="@dimen/button_h_5"
            android:background="@drawable/icon_next"
            android:visibility="gone"/>

    </LinearLayout>




</LinearLayout>