<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fifth_bg"

    >

    <LinearLayout
        android:id="@+id/semi_bg"
        android:layout_width="@dimen/patient_info_semi_bg_w"
        android:layout_height="@dimen/patient_info_semi_bg_h"
        android:layout_centerInParent="true"
        android:background="@color/semi_transparent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="150"
            android:gravity="center"
            android:orientation="vertical">


            <com.vasomedical.spinetracer.util.widget.button.NJButton
                android:id="@+id/intro_button"
                android:layout_width="@dimen/button_w_11"
                android:layout_height="@dimen/button_h_6"
                android:text="@string/intro"
                android:textColor="@color/white"
                android:textSize="@dimen/text_h_6"
                app:button_theme="3"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="480"
            android:gravity="center"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="150"
            android:gravity="center"
            android:orientation="vertical">


            <com.vasomedical.spinetracer.util.widget.button.NJButton
                android:id="@+id/next_button"
                android:layout_width="@dimen/button_w_11"
                android:layout_height="@dimen/button_h_6"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/text_h_6"
                app:button_theme="3"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>


    <!-- option_layout START -->
    <LinearLayout
        android:id="@+id/option_layout"
        android:layout_width="@dimen/patient_info_dialog_w"
        android:layout_height="@dimen/patient_info_dialog_h"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/grey_round_rect"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.vasomedical.spinetracer.util.widget.textView.NJTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_1"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:text="@string/please_select_detect_options"
                    android:textSize="@dimen/text_h_2"
                    android:textColor="@color/text_gray_dark"
                    android:textStyle="bold"
                    />


                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_1"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />



                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_2"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_3"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_4"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_5"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_6"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

                <com.vasomedical.spinetracer.util.widget.button.NJButton
                    android:id="@+id/option_button_7"
                    android:layout_width="@dimen/button_w_0"
                    android:layout_height="@dimen/button_h_6"
                    android:layout_marginTop="@dimen/margin_0"
                    android:text="@string/detect_option_7"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_h_5" />

            </LinearLayout>

        </ScrollView>






    </LinearLayout>

    <!-- option_layout END -->






</RelativeLayout>