<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_major_color"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:gravity="center"
        android:orientation="vertical">

        <com.vasomedical.spinetracer.util.widget.textView.NJTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_1"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_2"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="64"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="@dimen/edit_text_w"
            android:layout_height="@dimen/edit_text_h"
            android:elevation="@dimen/elevation_1"
            android:orientation="horizontal"
            android:background="@color/transparent"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/username_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_minor_color"
                android:elevation="@dimen/elevation_2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/img_username_icon_w"
                    android:layout_height="@dimen/img_username_icon_h"
                    android:background="@drawable/username" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/white"
                android:elevation="@dimen/elevation_1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.vasomedical.spinetracer.util.widget.editText.NJEditText
                    android:id="@+id/input_username"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_0"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:hint="@string/username"
                    android:textColor="@color/text_gray_dark"
                    android:textColorHint="@color/text_gray_light"
                    android:textSize="@dimen/text_h_5">

                    <requestFocus />
                </com.vasomedical.spinetracer.util.widget.editText.NJEditText>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="@dimen/edit_text_w"
            android:layout_height="@dimen/edit_text_h"
            android:layout_marginTop="@dimen/margin_1"
            android:elevation="@dimen/elevation_1"
            android:orientation="horizontal"
            android:background="@color/transparent"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/password_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_minor_color"
                android:elevation="@dimen/elevation_2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/img_username_icon_w"
                    android:layout_height="@dimen/img_username_icon_h"
                    android:background="@drawable/password"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/white"
                android:elevation="@dimen/elevation_1"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <com.vasomedical.spinetracer.util.widget.editText.NJEditText
                    android:id="@+id/input_password"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_0"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:gravity="left|center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_gray_dark"
                    android:textColorHint="@color/text_gray_light"
                    android:textSize="@dimen/text_h_5" />

            </LinearLayout>
        </LinearLayout>


        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/forget_password_button"
            android:layout_width="@dimen/button_w_5"
            android:layout_height="@dimen/button_h_5"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_6"
            app:button_theme="1" />


        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/login_button"
            android:layout_width="@dimen/edit_text_w"
            android:layout_height="@dimen/edit_text_h"
            android:elevation="@dimen/elevation_1"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_5" />


        <com.vasomedical.spinetracer.util.widget.textView.NJTextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/text_h_5"
            android:layout_marginTop="@dimen/margin_2"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_0"
            android:layout_marginRight="@dimen/margin_0"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:gravity="center"
        android:orientation="horizontal">

        <com.vasomedical.spinetracer.util.widget.button.NJButton
            android:id="@+id/sing_up_button"
            android:layout_width="@dimen/button_w_5"
            android:layout_height="@dimen/button_h_6"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h_6"
            app:button_theme="1" />

        <Button
            android:id="@+id/temp_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temp Login"/>

    </LinearLayout>


</LinearLayout>